Change short link

--- a/slides/universal-writing-reproducibility.html
+++ b/slides/universal-writing-reproducibility.html
@@ -38,7 +38,7 @@ Andrew Young School of Policy Studies&lt;br&gt;
 Georgia State University
 ]
 
-**andhs.co/writing**
+**andhs.co/utah-writing**
 
 ]
 
